--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.8.8",
-    "gulp-less": "^1.3.6",
-    "gulp-sass": "^1.0.0",
-    "gulp-minify-css": "^0.3.10",
     "gulp-concat": "^2.4.1",
-    "gulp-uglify": "^1.0.1",
+    "gulp-less": "^1.3.6",
+    "gulp-minify-css": "^0.3.10",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.0",
-    "gulp-notify-growl": "^1.0.2",
-    "gulp-notify": "^1.8.0"
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^1.0.1",
+    "node-sass": "^3.8.0"
   }
 }
