--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
   "name": "YourProject",
   "version": "0.0.1",
   "description": "",
-  "main": "gulpfile.js",
-  "keywords": [
-    "Gulp",
-    "Bower"
-  ],
+  "main": "webpack.mix.js",
+  "keywords": [],
   "author": "Your Name",
   "license": "MIT",
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
   "devDependencies": {
-    "gulp": "^3.8.8",
-    "gulp-concat": "^2.4.1",
-    "gulp-less": "^1.3.6",
-    "gulp-minify-css": "^0.3.10",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^1.0.1",
-    "node-sass": "^3.8.0"
+    "cross-env": "^5.0.1",
+    "jquery": "^3.1.1",
+    "bootstrap": "^4.0.0",
+    "popper.js": "^1.12.2",
+    "tooltip.js": "^1.1.5",
+    "laravel-mix": "^1.4.2"
   }
 }
