--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.0.0",
     "popper.js": "^1.12.2",
     "tooltip.js": "^1.1.5",
-    "laravel-mix": "^1.4.2"
+    "laravel-mix": "^1.4.2",
+    "node-sass": "^4.7.2"
   }
 }
